--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,4 +27,5 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
