--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -11,16 +11,28 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "ismobilejs": "^1.1.1",
+    "maplibre-gl": "^5.9.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-map-gl": "^8.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@kyosan-map/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "@kyosan-map/typescript-config": "workspace:*"
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  },
+  "exports": {
+    "./lib/*": "./src/lib/*.ts",
+    "./components/*": "./src/components/*.tsx",
+    "./hooks/*": "./src/hooks/*.ts",
+    "./context/*": "./src/context/*.ts",
+    "./functions/*": "./src/functions/*.ts",
+    "./types/*": "./src/types/*.ts"
   }
 }
