--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@kyosan-map/out-camera": "workspace:*",
     "@kyosan-map/ui": "workspace:*",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
+    "framer-motion": "^12.23.24",
     "@libsql/client": "^0.15.15",
     "lucide-react": "^0.475.0",
     "next": "15.5.4",
