--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@kyosan-map/out-camera": "workspace:*",
     "@kyosan-map/ui": "workspace:*",
+    "@libsql/client": "^0.15.15",
     "lucide-react": "^0.475.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@kyosan-map/typescript-config": "workspace:*",
+    "@kyosan-map/eslint-config": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
