--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,11 +9,14 @@
     "./react-internal": "./react-internal.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@next/eslint-plugin-next": "^15.4.5",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.32.0",
+    "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "^9.1.2",
+    "eslint-config-turbo": "^2.5.8",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
