--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,7 +28,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "eslint": "^9"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
