--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "@turf/destination": "^7.2.0",
+    "@turf/distance": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "immer": "^10.1.3",
     "ismobilejs": "^1.1.1",
     "maplibre-gl": "^5.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-map-gl": "^8.1.0"
+    "react-map-gl": "^8.1.0",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
