--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@kyosan-map/ui": "workspace:*",
     "@turf/destination": "^7.2.0",
     "@turf/distance": "^7.2.0",
     "@turf/helpers": "^7.2.0",
     "immer": "^10.1.3",
     "ismobilejs": "^1.1.1",
+    "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
