--- a/packages/map/tsconfig.json
+++ b/packages/map/tsconfig.json
@@ -2,13 +2,14 @@
   "extends": "@kyosan-map/typescript-config/react-library.json",
   "compilerOptions": {
     "paths": {
-      "@kyosan-map/map/*": ["./src/*"]
+      "@kyosan-map/map/*": ["./src/*"],
+      "@kyosan-map/ui/*": ["../../packages/ui/src/*"]
     },
     "declaration": true,
     "declarationDir": "dist/types",
     "emitDeclarationOnly": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*"], 
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
