--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
+    "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -27,9 +28,9 @@
     "@types/node": "^20.19.9",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "eslint": "^9",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.2",
-    "eslint": "^9"
+    "typescript": "^5.9.2"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
