--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -25,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-map-gl": "^8.1.0",
+    "use-debounce": "^10.0.6",
     "use-immer": "^0.11.0",
     "vaul": "^1.1.2"
   },
