--- a/packages/map/package.json
+++ b/packages/map/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@kyosan-map/ui": "workspace:*",
+    "@kyosan-map/shared": "workspace:*",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@turf/destination": "^7.2.0",
     "@turf/distance": "^7.2.0",
