--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kyosan-map/db": "workspace:*",
     "@kyosan-map/out-camera": "workspace:*",
     "@kyosan-map/ui": "workspace:*",
+    "@libsql/client": "^0.15.15",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "drizzle-orm": "^0.44.6",
     "framer-motion": "^12.23.24",
-    "@libsql/client": "^0.15.15",
     "lucide-react": "^0.475.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -25,8 +27,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@kyosan-map/typescript-config": "workspace:*",
     "@kyosan-map/eslint-config": "workspace:*",
+    "@kyosan-map/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
