feat: map/cameraの完成

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@kyosan-map/db": "workspace:*",
     "@kyosan-map/out-camera": "workspace:*",
     "@kyosan-map/ui": "workspace:*",
+    "@kyosan-map/map": "workspace:*",
     "@libsql/client": "^0.15.15",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
