--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.0",
     "@kyosan-map/db": "workspace:*",
+    "@kyosan-map/map": "workspace:*",
     "@kyosan-map/out-camera": "workspace:*",
     "@kyosan-map/ui": "workspace:*",
-    "@kyosan-map/map": "workspace:*",
     "@libsql/client": "^0.15.15",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
@@ -21,9 +22,11 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.475.0",
     "next": "15.5.4",
+    "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
