--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@kyosan-map/eslint-config": "workspace:*",
     "@kyosan-map/typescript-config": "workspace:*",
+    "madge": "^8.0.0",
     "prettier": "^3.6.2",
     "turbo": "^2.5.5",
     "typescript": "5.7.3"
