--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@kyosan-map/map": "workspace:*",
     "@kyosan-map/out-camera": "workspace:*",
     "@kyosan-map/ui": "workspace:*",
+    "@kyosan-map/shared": "workspace:*",
     "@libsql/client": "^0.15.15",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
